
Interface changes
-----------------

### New and changed callbacks

### Deleted and changed API methods

- SCIPtpiInitLock(), SCIPtpiDestroyLock(), SCIPtpiInitCondition(), SCIPtpiDestroyCondition() now take a double
  pointer to SCIP_LOCK/SCIP_CONDITION, respectively.

- Renamed SCIPtpiSumbitJob() to SCIPtpiSubmitJob().

### New API functions

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Deleted files
-------------

- deleted the now unused files: tpi_none.h, tpi_openmp.h, tpi_tnycthrd.h, type_tpi_none.h, type_tpi_openmp.h, type_tpi_tnycthrd.h

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

### Makefile

Fixed bugs
----------

Miscellaneous
-------------

- The TPI has been changed to become mostly independent from the actual parallel interface during compile time.
  For this, the locks and conditions are now pointers to abstract structs.

Known bugs
----------

@page RN80 Release notes for SCIP 8.0

@section RN000 SCIP 8.0.1
*************************
Features
--------

- clique lifting in cons_setppc (parameter enablecliquelifting) is only disabled if it has been applied
- improved curvature check for quadratic expressions when extended formulations are disabled

Performance improvements
------------------------
Examples and applications
-------------------------
Interface changes
-----------------
### New and changed callbacks
### Deleted and changed API methods
### New API functions
### Command line interface
### Interfaces to external software
### Changed parameters
### New parameters
### Data structures
Deleted files
-------------
Unit tests
----------
Testing
-------
Build system
------------
### Cmake

- avoid warnings about unrecognized compiler warning silencing options when compilation with GCC fails
### Makefile

- avoid warnings about unrecognized compiler warning silencing options when compilation with GCC fails

Fixed bugs
----------
