@@ -150,6 +150,7 @@ static
 SCIP_RETCODE fromAmpl(
    SCIP*                 scip,               /**< SCIP data structure */
    char*                 nlfilename,         /**< name of .nl file, without the .nl */
+   SCIP_Bool             interactive,        /**< whether to start SCIP shell instead of solve only */
    const char*           defaultsetname      /**< name of default settings file */
    )
 {
@@ -189,10 +190,17 @@ SCIP_RETCODE fromAmpl(
 
    SCIP_CALL( SCIPreadProb(scip, fullnlfilename, "nl") );
 
-   SCIPinfoMessage(scip, NULL, "\nsolve problem\n");
-   SCIPinfoMessage(scip, NULL, "=============\n\n");
+   if( interactive )
+   {
+      SCIP_CALL( SCIPstartInteraction(scip) );
+   }
+   else
+   {
+      SCIPinfoMessage(scip, NULL, "\nsolve problem\n");
+      SCIPinfoMessage(scip, NULL, "=============\n\n");
 
-   SCIP_CALL( SCIPsolve(scip) );
+      SCIP_CALL( SCIPsolve(scip) );
+   }
 
    SCIP_CALL( SCIPgetBoolParam(scip, "display/statistics", &printstat) );
    if( printstat )
@@ -243,7 +251,10 @@ SCIP_RETCODE SCIPprocessShellArguments(
    /* recognize and handle case where we were called from AMPL first */
    if( argc >= 3 && strcmp(argv[2], "-AMPL") == 0 )
    {
-      SCIP_CALL( fromAmpl(scip, argv[1], defaultsetname) );
+      /* check for optional argument -i after -AMPL */
+      interactive = argc >= 4 && strcmp(argv[3], "-i") == 0;
+
+      SCIP_CALL( fromAmpl(scip, argv[1], interactive, defaultsetname) );
 
       return SCIP_OKAY;
    }
@@ -494,7 +505,9 @@ SCIP_RETCODE SCIPprocessShellArguments(
          "  -c \"command\"  : execute single line of dialog commands (can be used multiple times)\n",
          argv[0]);
 #ifdef SCIP_WITH_AMPL
-      printf("\nas AMPL solver: %s <.nl-file without the .nl> -AMPL\n", argv[0]);
+      printf("\nas AMPL solver: %s <.nl-file without the .nl> -AMPL [-i]\n"
+         "  -i : start interactive SCIP shell after .nl file has been read\n",
+         argv[0]);
 #endif
       printf("\n");
    }
